--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Sky Dent RD</title>
   </head>
   <body>
-    <div id="root"></div>
+    <div id="root" class="mt-24"></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
