--- a/index.html
+++ b/index.html
@@ -9,5 +9,6 @@
   <body>
     <div id="root" class="mt-24"></div>
     <script type="module" src="/src/main.tsx"></script>
+    <link rel="stylesheet" href="https://use.typekit.net/oov2wcw.css">
   </body>
 </html>
